mettre en place des images fixes

--- a/src/includes/_jobDating.pug
+++ b/src/includes/_jobDating.pug
@@ -13,7 +13,7 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
             padding='0' 
             border='none'
             css-class="mobile-hide"
-            src='./images/afJobDating032025.png' 
+            src='https://i.ibb.co/dJx4cRPn/af-Job-Dating032025.png' 
             alt='Affiche du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025'
             width='210px' 
             )/
@@ -23,7 +23,7 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
             border='none'
             css-class="mobile-show"
             fluid-on-mobile="true"
-            src="./images/jobDating022025.png" 
+            src="https://i.ibb.co/bj6JCmFr/job-Dating022025.png" 
             alt='Logo du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025'
             width='480px' 
             )/
