--- a/src/includes/_opcoAtlas.pug
+++ b/src/includes/_opcoAtlas.pug
@@ -21,7 +21,7 @@ mj-section(background-color='#ffffff' padding="20px 17px")
             border="none"
             fluid-on-mobile="true"
             css-class="mobile-show"
-            src="./images/atlasOPCO022025.png"
+            src="https://i.ibb.co/Xfdnp3xt/atlas-OPCO022025.png"
             alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur le 6 mars de 9h à 12h"
             width="430px")/
     
