--- a/src/includes/_swisslife.pug
+++ b/src/includes/_swisslife.pug
@@ -12,7 +12,7 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
             padding="0px"
             border="none"
             css-class="mobile-hide"
-            src="./images/afSwisslife.png"
+            src="https://i.ibb.co/4g3fJ0yJ/af-Swisslife.png"
             alt="Afterwork swisslife propose 20 postes en apprentissage"
             width="210px")/
         //-Version Mobile
@@ -20,7 +20,7 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
             padding="0px"
             border="none"
             css-class="mobile-show"
-            src="./images/swisslife022025.png"
+            src="https://i.ibb.co/FLskXN3z/swisslife022025.png"
             alt="Afterwork swissLife,l'évènement propose 20 postes en apprentissage"
             width="210px")/
     
