--- a/src/includes/_tradingGame.pug
+++ b/src/includes/_tradingGame.pug
@@ -11,7 +11,7 @@ mj-section(background-color='#ffffff' padding="20px 17px")
             padding='0px'
             border='none'
             css-class="mobile-hide"
-            src='./images/tradingGaming.png'
+            src='https://i.ibb.co/Rkby72V7/trading-Gaming.png'
             alt='logo du Trading Game d\'Ecosup Campus'
             width="210px"
             )/
@@ -20,7 +20,7 @@ mj-section(background-color='#ffffff' padding="20px 17px")
             padding='0px'
             border='none'
             css-class="mobile-show"
-            src='./images/trading022025.png'
+            src='https://i.ibb.co/MkDqq9W7/trading022025.png'
             alt='logo du Trading Game d\'Ecosup Campus'
             width="210px"
             )/
