--- a/src/includes/_agenda.pug
+++ b/src/includes/_agenda.pug
@@ -2,22 +2,22 @@
 -
     const affichesList1 = [
         {
-            'image':'./images/afAtlas032025.png',
+            'image':'https://i.ibb.co/nssfmL4W/af-Atlas032025.png',
             'alt':'Rencontre - l\'alternance : un passeport pour une formation dans le supérieur 6 mars'
         },
         {
-            'image':'./images/afEtudiant032025.png',
+            'image':'https://i.ibb.co/2006Grjd/af-Etudiant032025.png',
             'alt':'Salon de l\'Étudiant : Formations et recrutement en alternance 21 et 22 mars'
         }
     ]
 -
     const affichesList2 = [
         {
-            'image':'./images/afJpo032025.png',
+            'image':'https://i.ibb.co/jPJJMkf1/af-Jpo032025.png',
             'alt':'Affiche de la journée portes ouvertes du samedi 29 mars 2025 de 9h30 à 13h'
         },
         {
-            'image':'./images/afJobDating032025.png',
+            'image':'https://i.ibb.co/dJx4cRPn/af-Job-Dating032025.png',
             'alt':'Affiche du job dating du jeudi 17 avril'
         }
     ]
