--- a/src/includes/_edito.pug
+++ b/src/includes/_edito.pug
@@ -2,7 +2,7 @@
 //- Edito Rentrée2024
 mj-section(background-color='#ffffff' padding='0px')
     mj-column(width='100%')
-        mj-image(padding='0' border='none' fluid-on-mobile='true' width='600px' src='./images/newsBandeau022025.jpg' alt="Christian Annaloro, responsable pédagogique d'Ecosup Assurance, jeunes filles et garçons futurs étudiants d'Ecosup Assurance")/
+        mj-image(padding='0' border='none' fluid-on-mobile='true' width='600px' src='https://i.ibb.co/cc1V93PM/news-Bandeau022025.jpg' alt="Christian Annaloro, responsable pédagogique d'Ecosup Assurance, jeunes filles et garçons futurs étudiants d'Ecosup Assurance")/
 mj-section(background-color='#ffffff' padding-top='10px' padding-bottom='40px')
     mj-column(width='88%') 
         mj-text(padding-top='5px' padding-bottom='0' mj-class="T+2 cA+2" text-transform='uppercase') Édito
