--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -116,7 +116,7 @@
         <mj-text padding="5px 0" mj-class="T400 cT-0"><span style="font-weight:700;color:#2d3748">Ecosup Assurance</span> est ravi de vous convier à son <span style="font-weight:700;color:#2D3748;">Job Dating</span> exceptionnel le <span style="font-weight:700;color:#2D3748;">17&nbsp;avril&nbsp;2025</span>, de <span style="font-weight:700;color:#2D3748;">14h à 17h30</span>, dans nos locaux. Un après-midi unique pour rencontrer les plus grands acteurs de l'assurance et de la banque : <span style="font-weight:700;color:#2D3748;">SMA BTP, Caisse d'Epargne, SwissLife, Crédit Agricole PFM, Crédit Agricole Assurance, Verpieren</span>, et bien d'autres&nbsp;!</mj-text>
         <mj-text padding="5px 0" mj-class="T400 cT-0">Ne manquez pas cette opportunité de <span style="font-weight:700;color:#2D3748;">booster votre avenir professionnel&nbsp;!</span> A vos CV&nbsp;!</mj-text>
         <mj-spacer height="10px"></mj-spacer>
-        <mj-text padding="5px 25px" align="right" color="#BA4995" font-size="16px" font-weight="700" line-height="20px"><a href="https://ecosup-assurance.fr/mastere-expert-en-ingenierie-patrimoniale/" style="color:#BA4995;font-size:16px;line-weight:20px;font-weight:700" target="_blank">Inscrivez-vous dès maintenant...</a></mj-text>
+        <mj-text padding="5px 25px" align="right" color="#BA4995" font-size="16px" font-weight="700" line-height="20px"><a href="https://ecosup-assurance.fr/mastere-expert-en-ingenierie-patrimoniale/" style="color:#BA4995;font-size:16px;line-height:20px;font-weight:700" target="_blank">Inscrivez-vous dès maintenant...</a></mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px 17px">
@@ -173,7 +173,7 @@
         <mj-text padding="5px 0px" align="left" mj-class="T400 cT-0">Demandez votre accès privilégié à l'espace entreprise pour découvrir <span style="color:#2D3748;font-weight:700;">notre CV Book</span>, reprenant tous les <span style="color:#2D3748;font-weight:700;">futurs talents</span> d'Ecosup Assurance Banque en <span style="color:#2D3748;font-weight:700;">recherche d'un contrat d'alternance</span>. </mj-text>
         <mj-text padding="5px 0px" align="left" mj-class="T400 cT-0">Nous pouvons également vous l'adresser au format PDF sur simple demande.</mj-text>
         <mj-spacer height="10px"></mj-spacer>
-        <mj-text padding="5px 25px" align="right" color="#BA4995" font-size="16px" font-weight="700" line-height="20px"><a href="https://ecosup-assurance.fr/mastere-expert-en-ingenierie-patrimoniale/" style="color:#BA4995;font-size:16px;line-weight:20px;font-weight:700" target="_blank">Téléchargez le cvBook...</a></mj-text>
+        <mj-text padding="5px 25px" align="right" color="#BA4995" font-size="16px" font-weight="700" line-height="20px"><a href="https://ecosup-assurance.fr/cv-book/" style="color:#BA4995;font-size:16px;line-height:20px;font-weight:700" target="_blank">Consultez notre cvBook code:022025</a></mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#ffffff" padding-top="20px" padding-bottom="10px">
