simplification des articles pour ganger en taille

--- a/src/includes/_opcoAtlas.pug
+++ b/src/includes/_opcoAtlas.pug
@@ -1,24 +1,21 @@
 mj-section(background-color='#ffffff' padding="20px 17px")
     mj-column(width="40%" padding="8px")
-        //-mj-image(
-            padding="0px"
-            border="none"
-            width="480px"
-            src="https://i.ibb.co/9KRgW2m/Ass03012025.jpg"
-            alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant"
-            )/
-        //-Version Bureau
         mj-image(
             padding="0px"
-            border="none"
+            width="210px"
+            src="https://i.ibb.co/nssfmL4W/af-Atlas032025.png"
+            alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur le 6 mars de 9h à 12h30 "
+            )/
+        //-Version Bureau
+            mj-image(
+            padding="0px"
             css-class="mobile-hide"
             src="https://i.ibb.co/nssfmL4W/af-Atlas032025.png"
             alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur le 6 mars de 9h à 12h30 "
             width="210px")/
         //-Version Mobile
-        mj-image(
+            mj-image(
             padding="0px"
-            border="none"
             fluid-on-mobile="true"
             css-class="mobile-show"
             src="https://i.ibb.co/Xfdnp3xt/atlas-OPCO022025.png"
