--- a/src/includes/_swisslife.pug
+++ b/src/includes/_swisslife.pug
@@ -1,24 +1,21 @@
 mj-section(background-color='#EDF2F7' padding="20px 17px")
     mj-column(width="40%" padding="8px")
-        //-mj-image(
-            padding="0px"
-            border="none"
-            width="480px"
-            src="https://i.ibb.co/9KRgW2m/Ass03012025.jpg"
-            alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant"
-            )/
-        //-Version Bureau
         mj-image(
             padding="0px"
-            border="none"
+            width="210px"
+            src="https://i.ibb.co/4g3fJ0yJ/af-Swisslife.png"
+            alt="Afterwork swisslife propose 20 postes en apprentissage"
+            )/
+        //-Version Bureau
+            mj-image(
+            padding="0px"
             css-class="mobile-hide"
             src="https://i.ibb.co/4g3fJ0yJ/af-Swisslife.png"
             alt="Afterwork swisslife propose 20 postes en apprentissage"
             width="210px")/
         //-Version Mobile
-        mj-image(
+            mj-image(
             padding="0px"
-            border="none"
             css-class="mobile-show"
             src="https://i.ibb.co/FLskXN3z/swisslife022025.png"
             alt="Afterwork swissLife,l'évènement propose 20 postes en apprentissage"
