--- a/src/includes/_tradingGame.pug
+++ b/src/includes/_tradingGame.pug
@@ -1,24 +1,21 @@
 mj-section(background-color='#ffffff' padding="20px 17px")
     mj-column(width="40%" padding="8px" )
-        //-mj-image(
-            padding='0px'
-            border='none'
-            src='https://i.ibb.co/4xjMZFG/Ass02012025.jpg'
-            alt='logo du Trading Game d\'Ecosup Campus'
-            width="480px")
-        //-Version bureau
         mj-image(
             padding='0px'
-            border='none'
+            src='https://i.ibb.co/Rkby72V7/trading-Gaming.png'
+            alt='logo du Trading Game d\'Ecosup Campus'
+            width="210px")
+        //-Version bureau
+            mj-image(
+            padding='0px'
             css-class="mobile-hide"
             src='https://i.ibb.co/Rkby72V7/trading-Gaming.png'
             alt='logo du Trading Game d\'Ecosup Campus'
             width="210px"
             )/
         //-Version mobile
-        mj-image(
+            mj-image(
             padding='0px'
-            border='none'
             css-class="mobile-show"
             src='https://i.ibb.co/MkDqq9W7/trading022025.png'
             alt='logo du Trading Game d\'Ecosup Campus'
