--- a/src/includes/_jobDating.pug
+++ b/src/includes/_jobDating.pug
@@ -1,31 +1,28 @@
 //- Interviews IA
 mj-section(background-color='#EDF2F7' padding="20px 17px")
     mj-column(width='40%' padding="8px")
-        //-mj-image(
-            padding="0"
-            border="none" 
-            src='https://i.ibb.co/CKkS7Mcf/Ass06012025.jpg' 
-            alt='Affiche du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025'
-            width='480px' 
-            )/
-        //-Version bureau
         mj-image(
-            padding='0' 
-            border='none'
-            css-class="mobile-hide"
+            padding="0"
             src='https://i.ibb.co/dJx4cRPn/af-Job-Dating032025.png' 
             alt='Affiche du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025'
             width='210px' 
             )/
-        //-Version mobile
-        mj-image(
+        //-Version bureau
+            mj-image(
             padding='0' 
-            border='none'
+            src='https://i.ibb.co/dJx4cRPn/af-Job-Dating032025.png' 
+            css-class="mobile-hide"
+            alt='Affiche du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025'
+            width='210px' 
+            )/
+        //-Version mobile
+            mj-image(
+            padding='0' 
             css-class="mobile-show"
             fluid-on-mobile="true"
             src="https://i.ibb.co/bj6JCmFr/job-Dating022025.png" 
             alt='Logo du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025'
-            width='480px' 
+            width='430px' 
             )/
     mj-column(width='60%' padding="8px")
         mj-spacer(height="12px")
