--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -39,7 +39,7 @@
           }
       }
       .mobile-show {
-          display: none;
+          display: none; 
       }
       
     </mj-style>
@@ -106,8 +106,7 @@
     </mj-section>
     <mj-section background-color="#EDF2F7" padding="20px 17px">
       <mj-column width="40%" padding="8px">
-        <mj-image padding="0" border="none" css-class="mobile-hide" src="https://i.ibb.co/dJx4cRPn/af-Job-Dating032025.png" alt="Affiche du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025" width="210px"/>
-        <mj-image padding="0" border="none" css-class="mobile-show" fluid-on-mobile="true" src="https://i.ibb.co/bj6JCmFr/job-Dating022025.png" alt="Logo du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025" width="480px"/>
+        <mj-image padding="0" src="https://i.ibb.co/dJx4cRPn/af-Job-Dating032025.png" alt="Affiche du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025" width="210px"/>
       </mj-column>
       <mj-column width="60%" padding="8px">
         <mj-spacer height="12px"></mj-spacer>
@@ -121,8 +120,7 @@
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px 17px">
       <mj-column width="40%" padding="8px">
-        <mj-image padding="0px" border="none" css-class="mobile-hide" src="https://i.ibb.co/nssfmL4W/af-Atlas032025.png" alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur le 6 mars de 9h à 12h30 " width="210px"/>
-        <mj-image padding="0px" border="none" fluid-on-mobile="true" css-class="mobile-show" src="https://i.ibb.co/Xfdnp3xt/atlas-OPCO022025.png" alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur le 6 mars de 9h à 12h" width="430px"/>
+        <mj-image padding="0px" width="210px" src="https://i.ibb.co/nssfmL4W/af-Atlas032025.png" alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur le 6 mars de 9h à 12h30 "/>
       </mj-column>
       <mj-column width="60%" padding="8px">
         <mj-spacer height="12px"></mj-spacer>
@@ -137,8 +135,7 @@
     </mj-section>
     <mj-section background-color="#EDF2F7" padding="20px 17px">
       <mj-column width="40%" padding="8px">
-        <mj-image padding="0px" border="none" css-class="mobile-hide" src="https://i.ibb.co/4g3fJ0yJ/af-Swisslife.png" alt="Afterwork swisslife propose 20 postes en apprentissage" width="210px"/>
-        <mj-image padding="0px" border="none" css-class="mobile-show" src="https://i.ibb.co/FLskXN3z/swisslife022025.png" alt="Afterwork swissLife,l'évènement propose 20 postes en apprentissage" width="210px"/>
+        <mj-image padding="0px" width="210px" src="https://i.ibb.co/4g3fJ0yJ/af-Swisslife.png" alt="Afterwork swisslife propose 20 postes en apprentissage"/>
       </mj-column>
       <mj-column width="60%" padding="8px">
         <mj-spacer height="12px"></mj-spacer>
@@ -150,8 +147,7 @@
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px 17px">
       <mj-column width="40%" padding="8px">
-        <mj-image padding="0px" border="none" css-class="mobile-hide" src="https://i.ibb.co/Rkby72V7/trading-Gaming.png" alt="logo du Trading Game d'Ecosup Campus" width="210px"/>
-        <mj-image padding="0px" border="none" css-class="mobile-show" src="https://i.ibb.co/MkDqq9W7/trading022025.png" alt="logo du Trading Game d'Ecosup Campus" width="210px"/>
+        <mj-image padding="0px" src="https://i.ibb.co/Rkby72V7/trading-Gaming.png" alt="logo du Trading Game d'Ecosup Campus" width="210px"></mj-image>
       </mj-column>
       <mj-column width="60%" padding="8px">
         <mj-spacer height="12px"></mj-spacer>
