--- a/src/includes/_agenda.pug
+++ b/src/includes/_agenda.pug
@@ -1,6 +1,6 @@
 //- Dates rentrée classes
 -
-    const affichesList1 = [
+    const affichesList = [
         {
             'image':'https://i.ibb.co/nssfmL4W/af-Atlas032025.png',
             'alt':'Rencontre - l\'alternance : un passeport pour une formation dans le supérieur 6 mars'
@@ -8,10 +8,7 @@
         {
             'image':'https://i.ibb.co/2006Grjd/af-Etudiant032025.png',
             'alt':'Salon de l\'Étudiant : Formations et recrutement en alternance 21 et 22 mars'
-        }
-    ]
--
-    const affichesList2 = [
+        },
         {
             'image':'https://i.ibb.co/jPJJMkf1/af-Jpo032025.png',
             'alt':'Affiche de la journée portes ouvertes du samedi 29 mars 2025 de 9h30 à 13h'
@@ -27,11 +24,7 @@ mj-section(background-color="#ffffff" padding-top="20px" padding-bottom="10px")
         mj-text(padding='0 25px' align='left' mj-class="T+2 cA+2" text-transform='uppercase') À vos Agendas
         mj-text(padding='0 25px' align='left' mj-class="T+1 cA+1") Salon, Job Dating et Journées Portes Ouvertes
 mj-section(background-color='#ffffff' padding-top="0" padding-left="23px" padding-right="23px")
-    mj-group(width="50%")
-        each affiche in affichesList1
-            mj-column(width='50%' padding="2px")
-                mj-image(padding='0' fluid-on-mobile="true" width="215px" src=affiche.image alt=affiche.alt)/
-    mj-group(width='50%')
-        each affiche in affichesList2
-            mj-column(width='50%' padding="2px")
-                mj-image(padding='0' fluid-on-mobile="true" width="215px" src=affiche.image alt=affiche.alt)/
+    mj-group
+        each affiche in affichesList
+            mj-column(padding="2px")
+                mj-image(padding='0' width="134px" src=affiche.image alt=affiche.alt)/
