--- a/src/includes/_partenaires.pug
+++ b/src/includes/_partenaires.pug
@@ -1,25 +1,25 @@
 mj-section(background-color="#586c8d" padding-left="23px" padding-right="23px" padding-bottom="10px")
-    mj-column(width="100%")
+    mj-column
         mj-text(padding="0px 2px" align='left' mj-class="T+1" color='#EDF2F7') Entreprises accueillant nos étudiants en apprentissage
 mj-section(background-color="#586c8d" padding="0px 23px")
-    mj-group(width="50%")
+    mj-group
         each logo in logosList1
-            mj-column(width="25%" background-color="#586c8d" padding="2px")
-                mj-image(padding="0" fluid-on-mobile="true" width="105px" src=logo.image alt=logo.alt)/
-    mj-group(width="50%")
+            mj-column(background-color="#586c8d" padding="2px")
+                mj-image(padding="0" width="65px" src=logo.image alt=logo.alt)/
         each logo in logosList2
-            mj-column(width="25%" background-color="#586c8d" padding="2px")
-                mj-image(padding="0" fluid-on-mobile="true" width="105px" src=logo.image alt=logo.alt)/
-    mj-group(width="50%")
+            mj-column(background-color="#586c8d" padding="2px")
+                mj-image(padding="0" width="65px" src=logo.image alt=logo.alt)/
+mj-section(background-color="#586c8d" padding="0px 23px")
+    mj-group
         each logo in logosList3
-            mj-column(width="25%" background-color="#586c8d" padding="2px")
-                mj-image(padding="0" fluid-on-mobile="true" width="105px" src=logo.image alt=logo.alt)/
-    mj-group(width="50%")
+            mj-column(background-color="#586c8d" padding="2px")
+                mj-image(padding="0" width="65px" src=logo.image alt=logo.alt)/
         each logo in logosList4
-            mj-column(width="25%" background-color="#586c8d" padding="2px")
-                mj-image(padding="0" fluid-on-mobile="true" width="105px" src=logo.image alt=logo.alt)/
-    mj-group(width="50%")
-            mj-column(width="25%" background-color="#586c8d" padding="2px")
-                mj-image(align="left" padding="0" fluid-on-mobile="true" width="105px" src="https://i.ibb.co/SD9PWN32/vespieren.png" alt="logo des Assurances Vespieren")/
-            mj-column(width="25%" background-color="#586c8d" padding="2px")
-    mj-group(width="50%")
+            mj-column(background-color="#586c8d" padding="2px")
+                mj-image(padding="0" width="65px" src=logo.image alt=logo.alt)/
+mj-section(background-color="#586c8d" padding="0px 23px")
+    mj-group
+        mj-column(width="12,5%" background-color="#586c8d" padding="2px")
+            mj-image(align="left" padding="0" width="65px" src="https://i.ibb.co/SD9PWN32/vespieren.png" alt="logo des Assurances Vespieren")/
+        mj-column(width="12,5%" background-color="#586c8d" padding="2px")
+    mj-group
