--- a/src/includes/_partenaires.pug
+++ b/src/includes/_partenaires.pug
@@ -5,21 +5,9 @@ mj-section(background-color="#586c8d" padding="0px 23px")
     mj-group
         each logo in logosList1
             mj-column(background-color="#586c8d" padding="2px")
-                mj-image(padding="0" width="65px" src=logo.image alt=logo.alt)/
+                mj-image(padding="0" align="center" width="65px" src=logo.image alt=logo.alt)/
+mj-section(background-color="#586c8d" padding="0px 23px")
+    mj-group
         each logo in logosList2
             mj-column(background-color="#586c8d" padding="2px")
-                mj-image(padding="0" width="65px" src=logo.image alt=logo.alt)/
-mj-section(background-color="#586c8d" padding="0px 23px")
-    mj-group
-        each logo in logosList3
-            mj-column(background-color="#586c8d" padding="2px")
-                mj-image(padding="0" width="65px" src=logo.image alt=logo.alt)/
-        each logo in logosList4
-            mj-column(background-color="#586c8d" padding="2px")
-                mj-image(padding="0" width="65px" src=logo.image alt=logo.alt)/
-mj-section(background-color="#586c8d" padding="0px 23px")
-    mj-group
-        mj-column(width="12,5%" background-color="#586c8d" padding="2px")
-            mj-image(align="left" padding="0" width="65px" src="https://i.ibb.co/SD9PWN32/vespieren.png" alt="logo des Assurances Vespieren")/
-        mj-column(width="12,5%" background-color="#586c8d" padding="2px")
-    mj-group
+                mj-image(padding="0" align="center" width="65px" src=logo.image alt=logo.alt)/
