--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -202,67 +202,61 @@
     <mj-section background-color="#586c8d" padding="0px 23px">
       <mj-group>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/s9bNW5TV/axa.png" alt="logo AXA assurance"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/s9bNW5TV/axa.png" alt="logo AXA assurance"/>
         </mj-column>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/Ndtpn0MF/sma.png" alt="logo SMA btp"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/Ndtpn0MF/sma.png" alt="logo SMA btp"/>
         </mj-column>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/b5SxQdLj/dlm.png" alt="logo DLM location"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/b5SxQdLj/dlm.png" alt="logo DLM location"/>
         </mj-column>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/tPHbkbGP/concilian.png" alt="logo Concilian"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/tPHbkbGP/concilian.png" alt="logo Concilian"/>
         </mj-column>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/N2D7V4M9/mesange.png" alt="logo Mésange Prévoyance"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/N2D7V4M9/mesange.png" alt="logo Mésange Prévoyance"/>
         </mj-column>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/BKrjVTWW/ghenner.png" alt="logo groupe Henner"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/BKrjVTWW/ghenner.png" alt="logo groupe Henner"/>
         </mj-column>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/Jgb3gS7/allianz.png" alt="logo Allianz assurance"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/Jgb3gS7/allianz.png" alt="logo Allianz assurance"/>
         </mj-column>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/nq7Zh1b0/cagricole.png" alt="logo Crédit Agricole"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/nq7Zh1b0/cagricole.png" alt="logo Crédit Agricole"/>
         </mj-column>
       </mj-group>
     </mj-section>
     <mj-section background-color="#586c8d" padding="0px 23px">
       <mj-group>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/svCSkW0J/swisslife.png" alt="logo couleur Swiss Life"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/svCSkW0J/swisslife.png" alt="logo couleur Swiss Life"/>
         </mj-column>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/BK5G6NKX/malakoff.png" alt="logo couleur Humanis Malakoff"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/BK5G6NKX/malakoff.png" alt="logo couleur Humanis Malakoff"/>
         </mj-column>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/zhzhc7ZZ/sofinco.png" alt="logo couleur Sofinco"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/zhzhc7ZZ/sofinco.png" alt="logo couleur Sofinco"/>
         </mj-column>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/1tpfhHps/deledalle.png" alt="logo couleur Deledalle courtier d'assurances"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/1tpfhHps/deledalle.png" alt="logo couleur Deledalle courtier d'assurances"/>
         </mj-column>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/C4Rm3Wp/2m.png" alt="logo 2M votre courtier assurancess"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/C4Rm3Wp/2m.png" alt="logo 2M votre courtier assurancess"/>
         </mj-column>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/6h28XDy/mma.png" alt="logo MMA assurance"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/6h28XDy/mma.png" alt="logo MMA assurance"/>
         </mj-column>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/1tpfhHps/deledalle.png" alt="logo Diot groupe Diot Siaci"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/1tpfhHps/deledalle.png" alt="logo Diot groupe Diot Siaci"/>
         </mj-column>
         <mj-column background-color="#586c8d" padding="2px">
-          <mj-image padding="0" width="65px" src="https://i.ibb.co/Zb0ZFDy/cepargne.png" alt="logo Caisse d'Épargne"/>
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/Zb0ZFDy/cepargne.png" alt="logo Caisse d'Épargne"/>
+        </mj-column>
+        <mj-column background-color="#586c8d" padding="2px">
+          <mj-image padding="0" align="center" width="65px" src="https://i.ibb.co/SD9PWN32/vespieren.png" alt="logo Vespieren"/>
         </mj-column>
       </mj-group>
-    </mj-section>
-    <mj-section background-color="#586c8d" padding="0px 23px">
-      <mj-group>
-        <mj-column width="12,5%" background-color="#586c8d" padding="2px">
-          <mj-image align="left" padding="0" width="65px" src="https://i.ibb.co/SD9PWN32/vespieren.png" alt="logo des Assurances Vespieren"/>
-        </mj-column>
-        <mj-column width="12,5%" background-color="#586c8d" padding="2px"></mj-column>
-      </mj-group>
-      <mj-group></mj-group>
     </mj-section>
     <mj-section background-color="#586c8d" padding="20px 32px">
       <mj-column width="320px">
