--- a/src/includes/_footer.pug
+++ b/src/includes/_footer.pug
@@ -3,7 +3,7 @@ mj-section(background-color='#586c8d' padding='20px 32px')
     mj-column(width='320px')
         mj-image(width='140px' padding='0' align='center' src='https://i.ibb.co/8K8y4kW/ECOSUP-CAMPUS-Blanc012024.png' alt='Logo Ecosup Campus')/
         mj-text(padding='0' align='center' mj-class="T-1-400 cT-1") #[a(style="text-decoration:none;color:#fcfcfc;" href="https://www.google.com/maps/@50.72132372645463,3.1568485683426477?ll=50.72132372645463,3.1568485683426477&z=12&q=Ecosup+Campus") 17 Place Charles et Albert Roussel]
-        mj-text(padding='0' align='center' mj-class="T-1-400 cT-1" text-transform='uppercase') 59200 Tourcoing
+        mj-text(padding='0' align='center' mj-class="T-1-400 cT-1") #[a(style="text-decoration:none;color:#fcfcfc;" href="https://www.google.com/maps/@50.72132372645463,3.1568485683426477?ll=50.72132372645463,3.1568485683426477&z=12&q=Ecosup+Campus") 59200 TOURCOING]
         mj-text(padding='0' align='center' mj-class="T-1-700 cT-1") #[a(style='text-decoration:none;color:#fcfcfc;' href='tel:0320700606') Tél 03.20.70.06.06]               
         mj-text(padding='0' align='center' mj-class="T-1-400 cT-1") #[a(style='text-decoration:none;color:#fcfcfc;' href='mailto:contact@ecosup-campus.fr') contact@ecosup-campus.fr]
         mj-text(padding='0' align='center' mj-class="T-1-700 cT-1") #[a(style='text-decoration:none;color:#fcfcfc;' href='https://ecosup-campus.com') www.ecosup-campus.fr]
